--- a/app/views/users/new_form.html.erb
+++ b/app/views/users/new_form.html.erb
@@ -4,9 +4,10 @@
   <% end %>
 </ul>
 
-<form action="users" method="post">
+<form action="/users" method="post">
+  <input name="authenticity_token" type="hidden" value="token_value">
   <input type="text" placeholder="New Email" name="users[email]" value="<%=@user.email%>"></input>
-  <input type="text" placeholder="New Password" name="users[password]"></input>
+  <input type="password" placeholder="New Password" name="users[password]"></input>
   <input type="submit"></input>
 </form>
 
