--- a/app/views/users/list.html.erb
+++ b/app/views/users/list.html.erb
@@ -1,3 +1,3 @@
 <% @users.each do |user| %>
-  <p><%= user.email %></p>
+  <p><%= user.email %><a href="/users/<%= user.id %>/delete">Delete User?</a></p>
 <% end %>
