--- a/app/views/users/new_form.html.erb
+++ b/app/views/users/new_form.html.erb
@@ -4,12 +4,11 @@
   <% end %>
 </ul>
 
-<form action="/users" method="post">
-  <input name="authenticity_token" type="hidden" value="<%= form_authenticity_token %>">
+<%= form_tag('/users', method: "post") do %>
   <input type="text" placeholder="New Email" name="users[email]" value="<%=@user.email%>"></input>
   <input type="password" placeholder="New Password" name="users[password]"></input>
   <input type="submit"></input>
-</form>
+<% end %>
 
 
 
