--- a/app/views/stories/list.html.erb
+++ b/app/views/stories/list.html.erb
@@ -1,3 +1,3 @@
 <% @stories.each do |story| %>
-  <p><%= story.name %>  <a href="/users/<%= @user.id %>/stories/<%= story.id %>/delete">Delete Story?</a>  <a href="users/<%= @user.id %>/stories/<%= story.id %>/edit">Edit Story?</a></p>
+  <p><%= story.name %>  <a href="/users/<%= @user.id %>/stories/delete/<%= story.id %>">Delete Story?</a> <a href="/users/<%= @user.id %>/stories/<%= story.id %>/edit">Edit Story?</a></p>
 <% end %>
